Remove unused transfer-ownership command